ambulance waiting list - web api with mongodb persistence
